--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 # C extensions
 *.so
 
+webserver/opentrain/db.sqlite3
 # Packages
 *.egg
 *.egg-info
@@ -34,3 +35,7 @@ nosetests.xml
 .mr.developer.cfg
 .project
 .pydevproject
+
+
+
+
