--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ argparse==1.2.1
 django-tastypie==0.10.0
 ipython==1.1.0
 python-dateutil==2.2
+python-mimeparse==0.1.4
 requests==2.0.1
 six==1.4.1
 wsgiref==0.1.2
