--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ django-tastypie==0.10.0
 ipython==1.1.0
 python-dateutil==2.2
 python-mimeparse==0.1.4
+pytz==2013.8
 requests==2.0.1
 six==1.4.1
 wsgiref==0.1.2
