--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 Django==1.6
 argparse==1.2.1
 django-bootstrap3-datetimepicker==2.1.0
+django-extensions==1.2.5
 django-tastypie==0.10.0
 ipython==1.1.0
 python-dateutil==2.2
