--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,17 @@
 Django==1.6
+Fabric==1.8.1
 argparse==1.2.1
 django-bootstrap3-datetimepicker==2.1.0
 django-extensions==1.2.5
 django-tastypie==0.10.0
+ecdsa==0.10
 ipython==1.1.0
+paramiko==1.12.1
+psycopg2==2.5.1
+pycrypto==2.6.1
 python-dateutil==2.2
 python-mimeparse==0.1.4
-pytz==2013.9
+pytz==2013.8
 requests==2.0.1
 six==1.4.1
 wsgiref==0.1.2
