--- a/webserver/FAB/files/supervisor/opentrain.conf
+++ b/webserver/FAB/files/supervisor/opentrain.conf
@@ -2,7 +2,7 @@
 user = opentrain
 directory = /home/opentrain/work/OpenTrains/webserver/opentrain
 command = /home/opentrain/work/OpenTrains/webserver/SERVER/bin/run_gunicorn.sh
-stdout_logfile = /home/opentrain/work/OpenTrains/webserver/SERVER/bin/run.log
-stderr_logfile = /home/opentrain/work/OpenTrains/webserver/SERVER/log/run.err
+stdout_logfile = /home/opentrain/log/run.log
+stderr_logfile = /home/opentrain/log/run.err
 
 
