--- a/webserver/FAB/files/nginx/opentrain.conf
+++ b/webserver/FAB/files/nginx/opentrain.conf
@@ -7,11 +7,11 @@ server {
 server {
 
     listen 80;
-    server_name opentrain.hasadna.org.il 192.241.154.128;
+    server_name opentrain.hasadna.org.il %(IP)s;
 
 
     location /static/ {
-        root root /home/opentrain/work/OpenTrains/webserver/opentrain/static;
+        root %(HOME)s/work/OpenTrains/webserver/opentrain/;
     }
 
     location / {
