--- a/webserver/FAB/files/supervisor/opentrain.conf
+++ b/webserver/FAB/files/supervisor/opentrain.conf
@@ -1,8 +1,14 @@
 [program:opentrain]
-user = opentrain
-directory = /home/opentrain/work/OpenTrains/webserver/opentrain
-command = /home/opentrain/work/OpenTrains/webserver/SERVER/bin/run_gunicorn.sh
-stdout_logfile = /home/opentrain/log/run.log
-stderr_logfile = /home/opentrain/log/run.err
+user = %(USER)s
+directory = %(HOME)s/work/OpenTrains/webserver/opentrain
+command = %(HOME)s/bin/run_gunicorn.sh
+stdout_logfile = %(HOME)s/log/run.log
+redirect_stderr = true
+
+
+
+
+
+
 
 
