--- a/webserver/FAB/files/nginx/opentrain.conf
+++ b/webserver/FAB/files/nginx/opentrain.conf
@@ -1,17 +1,17 @@
 server {
     listen 80;
-    server_name www.opentrain.hasadna.org.il;
-    return 301 $scheme://opentrain.hasadna.org.il$request_uri;
+    server_name www.%(DNS)s;
+    return 301 $scheme://%(DNS)s$request_uri;
 }
 
 server {
 
     listen 80;
-    server_name opentrain.hasadna.org.il %(IP)s;
+    server_name %(DNS)s %(IP)s;
 
 
     location /static/ {
-        root %(HOME)s/work/OpenTrains/webserver/opentrain/;
+        root %(DJANGO_BASE_DIR)s;
     }
 
     location / {
