--- a/webserver/FAB/files/supervisor/opentrain.conf
+++ b/webserver/FAB/files/supervisor/opentrain.conf
@@ -1,6 +1,6 @@
 [program:opentrain]
 user = %(USER)s
-directory = %(HOME)s/work/OpenTrains/webserver/opentrain
+directory = %(DJANGO_BASE_DIR)s
 command = %(HOME)s/bin/run_gunicorn.sh
 stdout_logfile = %(HOME)s/log/run.log
 redirect_stderr = true
