rewrite of the algorithm to be online, oop, and use wifi info

--- a/webserver/FAB/files/requirements.txt
+++ b/webserver/FAB/files/requirements.txt
@@ -19,6 +19,7 @@ python-mimeparse==0.1.4
 pytz==2013.8
 requests==2.0.1
 scipy==0.13.2
+scikit-learn==0.14.1
 simplekml==1.2.3
 six==1.4.1
 wsgiref==0.1.2
