--- a/webserver/FAB/files/nginx/opentrain.conf
+++ b/webserver/FAB/files/nginx/opentrain.conf
@@ -20,8 +20,8 @@ server {
         proxy_redirect off;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Scheme $scheme;
-        proxy_connect_timeout 10;
-        proxy_read_timeout 10;
+        #proxy_connect_timeout 10;
+        #proxy_read_timeout 10;
         proxy_pass http://localhost:9000/;
     }
 
