--- a/webserver/FAB/files/requirements.txt
+++ b/webserver/FAB/files/requirements.txt
@@ -1,21 +1,23 @@
 Django==1.6
 Fabric==1.8.1
 argparse==1.2.1
-distribute==0.7.3
 django-bootstrap3-datetimepicker==2.1.0
 django-extensions==1.2.5
 django-tastypie==0.10.0
+ecdsa==0.10
 gunicorn==18.0
 ipython==1.1.0
-nose==1.3.0
+numpy==1.7.1
 paramiko==1.12.1
 psycopg2==2.5.1
+pycrypto==2.6.1
 python-dateutil==2.2
 python-mimeparse==0.1.4
 pytz==2013.8
-redis==2.9.0
+redis==2.9.1
 requests==2.0.1
+scikit-learn==0.14.1
+scipy==0.12.0
 simplekml==1.2.3
 six==1.4.1
 wsgiref==0.1.2
-
